--- a/projects/project-2/Cargo.toml
+++ b/projects/project-2/Cargo.toml
@@ -11,6 +11,7 @@ failure = "0.1.8"
 serde = { version = "1.0.152", features = ["derive"] }
 serde_json = "1.0.92"
 tempfile = "3.0.7"
+walkdir = "2.2.7"
 
 [dev-dependencies]
 assert_cmd = "0.11.0"
