--- a/projects/project-3/Cargo.toml
+++ b/projects/project-3/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2021"
 
 [dependencies]
 clap = "2.32.0"
+failure = "0.1.8"
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
 
 [dev-dependencies]
 assert_cmd = "0.11"
